Update README and NOTICE for public domain code

--- a/README
+++ b/README
@@ -1,10 +1,9 @@
 OSEHRA - Open Source Electronic Health Record Agent
 
-This repository is a placeholder for future storage of VistA, the
-Veterans Health Information Systems and Technology Architecture.  An
-initial version will be released from the US Department of Veterans
-Affairs via the Freedom of Information Act (FOIA).  The OSEHRA will
-convert it to a filesystem-based representation for publication in this
-repository.
+This source tree contains a representation of VistA, the Veterans Health
+Information Systems and Technology Architecture.  An initial version was
+released from the US Department of Veterans Affairs via the Freedom of
+Information Act (FOIA).  The OSEHRA converted it to a filesystem-based
+representation for publication in this repository.
 
 Please visit http://osehra.org for more information.
